# django-commons-playground

./: README.md  pyproject.toml
.github/workflows/: release.yml
docs/: README.md  contributing.md  getting_started.md  installation.md
src/django_community_playground/: playground.py
tests/: test_playground.py
